--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.2
 MarkupSafe==2.1.1
+python-dotenv==0.20.0
 SQLAlchemy==1.4.40
 visitor==0.1.3
 Werkzeug==2.2.2
